--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Create dummy tauri.conf.json
         run: |
           mkdir -p src-tauri
-          echo '{ "package": { "version": "0.0.1" } }' > src-tauri/tauri.conf.json
+          echo '{ "version": "0.0.1" }' > src-tauri/tauri.conf.json
 
       - name: Run action (should pass unless release already exists)
         id: check
