--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
     required: false
     default: "v{VERSION}"
   tauri_config_path:
-    description: "Path to the Tauri configuration file directory (default: src-tauri)"
+    description: "Path to the Tauri configuration file directory (default: ./src-tauri/tauri.conf.json)"
     required: false
 
 outputs:
