--- a/example/workflow.yml
+++ b/example/workflow.yml
@@ -17,6 +17,7 @@ jobs:
           owner: your-username
           repo: your-repo
           tag_name_format: v{VERSION}
+          tauri_config_path: ./example-app/src-tauri/tauri.conf.json
 
       - name: Log version
         run: echo "Checked version ${{ steps.check.outputs.version }}"
