--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/setup-node@v4
       - run: |
           mkdir -p example-app/src-tauri
-          echo '{ "name": "0.0.0" }' > example-app/src-tauri/tauri.conf.json
+          echo '{ "version": "0.0.0" }' > example-app/src-tauri/tauri.conf.json
       - uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/setup-node@v4
       - run: |
           mkdir -p example-app/src-tauri
-          echo '{ "name": "no-version" }' > example-app/src-tauri/tauri.conf.json
+          echo '{ "version": "no-version" }' > example-app/src-tauri/tauri.conf.json
       - uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
