--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Print extracted version
         run: echo "Extracted version is ${{ steps.check.outputs.version }}"
 
-  invalid-config:
+  duplicate-release:
     runs-on: ubuntu-latest
     continue-on-error: true # ← エラーになるのを許容
     steps:
@@ -48,7 +48,27 @@ jobs:
           tauri_config_path: ./example-app/src-tauri/tauri.conf.json
           tag_name_format: v{VERSION}
 
-  duplicate-release:
+      - name: Run Composite Action (expected to fail)
+        id: duplicate
+        uses: ./
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          owner: shm11C3
+          repo: tauri-check-release-version
+          tauri_config_path: ./example-app/src-tauri/tauri.conf.json
+          tag_name_format: v{VERSION}
+
+      - name: Check that it failed as expected
+        if: steps.duplicate.outcome == 'failure'
+        run: echo "✅ Action failed as expected due to duplicate release"
+
+      - name: Fail the test if it succeeded (unexpected)
+        if: steps.duplicate.outcome == 'success'
+        run: |
+          echo "❌ Action unexpectedly succeeded despite duplicate release"
+          exit 1
+
+  invalid-config:
     runs-on: ubuntu-latest
     continue-on-error: true # ← エラーになるのを許容
     steps:
